Templates: responsive tweaks and layout fixes (#850)
* Theme: adjust the Thickbox modal window to scroll on small screens

* Forms: adjust the spacing for nested tables on small screens

* Templates: prevent tinymce resource buttons overlap on small screens

* Templates: only display custom blankSlate text if no search filters

* Messenger: fix message wall navigation buttons

* Templates: move Form validation inside the <td> element

* Theme: prevent colorOddEven from overwriting row alert colours

* Forms: update nested Table layouts to handle uneven columns

* Theme: adjust the Thickbox modal window width on small screens

* System: add weeks to the relativeTime class, readable default values

* System: only centre large-sized userPhotos by default in Format class

* Students: fix milestone checkbox layout in Edit Application Form

* Attendance: fix the Student History legend layout

* Staff: add row highlight for Left staff in View Staff list

* Templates: hide filters if table doesn't have filter options defined

* Templates: fix minor links horizontal shift when house logo is loading

* System: automatically resolve relative URLs in Format::link method

--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -230,11 +230,11 @@ table td {
 }
 
 .odd,
-table.colorOddEven tr {
+table.colorOddEven tr:not([class]) {
     background-color: #fefefe;
 }
 .even,
-table.colorOddEven tr:nth-of-type(odd) {
+table.colorOddEven tr:nth-of-type(odd):not([class]) {
     background-color: #f9f9f9;
 }
 
@@ -256,14 +256,11 @@ table tr:first-child th:first-child {
     -moz-border-radius-topleft: 3px;
     -webkit-border-top-left-radius: 3px;
     border-top-left-radius: 3px;
-    text-align: left;
-    padding-left: 15px;
 }
 table tr:first-child th:last-child {
     -moz-border-radius-topright: 3px;
     -webkit-border-top-right-radius: 3px;
     border-top-right-radius: 3px;
-    padding-left: 5px;
 }
 table tr:last-child td:first-child {
     -moz-border-radius-bottomleft: 3px;
@@ -897,12 +894,6 @@ h6.bigTop {
     margin-top: 50px !important;
 }
 
-
-/* Forms - ignore the colorOddEven stripe on footer */
-form table.colorOddEven tr:last-of-type {
-    background-color: #fbfbfb;
-}
-
 /* v13 NEW CLASSES */
 td.wordWrap {
     overflow-wrap: break-word;
@@ -940,21 +931,6 @@ table tr.heading td {
     );
     background: -moz-linear-gradient(top, #ebebeb, #dfdfdf);
     text-align: left;
-}
-
-table tr.heading:first-child td:first-child {
-    -moz-border-radius-topleft: 3px;
-    -webkit-border-top-left-radius: 3px;
-    border-top-left-radius: 3px;
-    text-align: left;
-    padding-left: 15px;
-}
-
-table tr.heading:first-child td:last-child {
-    -moz-border-radius-topright: 3px;
-    -webkit-border-top-right-radius: 3px;
-    border-top-right-radius: 3px;
-    padding-left: 5px;
 }
 
 /* Usability tweak to make large data tables like User Permissions easier to read */
